# CoGAPS

./: .BBSoptions  .Rapp.history  .Rbuildignore  .astylerc  .gitattributes  .gitignore  .lintr  .travis.yml  ChangeLog  CoGAPS  DESCRIPTION  DESCRIPTION~  Dockerfile  INDEX  LICENSE  NAMESPACE  NEWS  README.md  aclocal.m4  appveyor.yml  cleanup  config.status  configure  configure.ac  old_configure.ac  pdac_peng_epi.Rds
.github/workflows/: build-push-container.yml  r-build-check.yml
CoGAPS.Rcheck/: CoGAPS-Ex.R  CoGAPS-Ex.Rout
CoGAPS.Rcheck/CoGAPS/: DESCRIPTION  INDEX
CoGAPS.Rcheck/tests/: testthat.Rout
R/: .Rapp.history  AtomChain2APNorm.R  CoGAPS.R  DistributedCogaps.R  GAPS.R  GWCoGAPS.AP.fixed.Rda  GWCoGAPS.R  GWCoGAPS.R~  GenesInCoGAPSSets.Rda  GetListDataGAPS.R  HelperFunctions.R  Package.R  RcppExports.R  ReadCoGAPSResults.R  RunGAPS.R  SMatrix.R  SubsetData.R  binaryA.R  calcCoGAPSStat.R  calcGeneGSStat.R  calcPermGS.R  calcZ.R  cellMatchR.R  class-CoGAPSParams.R  class-CoGapsParams.R  class-CoGapsResult.R  class-CogapsParams.R  class-CogapsResult.R  class-GapsParams.R  class-GapsReturn.R  createGWCoGAPSSets.R  createGWCoGAPSSets.R~  createscCoGAPSSets.R  data.R  distributedCogaps.R  exampleScript.R  gapsInterPattern.R  gapsIntraPattern.R  gapsMapRun.R  gapsMapTestRun.R  (+38 more)
R/unix/: progress.bar.R  zzz.R  zzz.R.in
R/windows/: progress.bar.R  zzz.R
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: .Rapp.history  EasySimGS.RData  GIST.RData  GIST.mtx  GIST_TS_20084.RData  ModSim.RData  ModSimBases.txt  ModSimData.txt  ModSimResult.Rds  ModSimResult.h5ad  PDAC_Peng_Epi.h5ad  SimpSim.RData  TFGSList.RData  TFSimData.RData  cogapsresult.Rds  inputdata.Rds  inputdata_monocle.Rds  inputdata_seurat.Rds  modsimdata.rda  modsimresult.rda  pdac_peng_epi.Rds  pdac_peng_epi.csv  pdacresult.h5ad  results.RData  resultsCo.Rdata
inst/: CITATION  async_notes.txt
inst/benchmarks/: benchmarks.R  cogaps.R  combinedData.RData  topLevelBenchmark.R
inst/doc/: AppNote.bib  CoGAPSUsersManual.Rnw
inst/extdata/: GIST.csv  GIST.gct  GIST.mtx  GIST.tsv
inst/old/: oldAtomicQueue.cpp  oldAtomicQueue.h  oldAtomicSupport.cpp
inst/profiling/: profile_standard.R  profiling.sh  runProfile  valgrind_out.txt
inst/scripts/: abc-test.R  bigger-test.R  bug.R  comparison.R  debugRuns.R  fixed-normalization.R  fixed-param.R  gibbs-trans.R  logistic-growth.R  logistic-pattern.R  logistic-pattern.Rmd  parallel.R
inst/trans/: DESCRIPTION  NAMESPACE
inst/vignettes/: GWCoGAPSvignette.md
man/: AGS.Rd  CoGAPS-methods.Rd  CoGAPS-package.Rd  CoGAPS.Rd  CoGAPSFromFile.Rd  CoGapsFromCheckpoint.Rd  CoGapsParams-class.Rd  CogapsParams-class.Rd  CogapsParams.Rd  CogapsResult-class.Rd  D.Rd  D1.Rd  D2.Rd  D3.Rd  D4.Rd  D5.Rd  DGS.Rd  GAPS.Rd  GIST.D.Rd  GIST.GeneSets.Rd  GIST.S.Rd  GIST.data_frame.Rd  GIST.matrix.Rd  GIST.result.Rd  GIST.uncertainty.Rd  GSets.Rd  GWCoGAPS.Rd  GWCoGapsFromCheckpoint.Rd  GapsParams-class.Rd  MANOVA-methods.Rd  ModSim.D.Rd  ModSim.P.true.Rd  PGS.Rd  PatternMatcher.Rd  ReadCoGAPSResults.Rd  SimpSim.A.Rd  SimpSim.D.Rd  SimpSim.P.Rd  SimpSim.S.Rd  SimpSim.data.Rd  (+114 more)
nextflow/: main.nf
src/: Abc.cpp  Abc.h  Algorithms.cpp  Algorithms.h  Archive.h  AtomAllocator.cpp  AtomAllocator.h  AtomicDomain.cpp  AtomicDomain.h  AtomicSupport-unused.cc  AtomicSupport.cc  AtomicSupport.cpp  AtomicSupport.h  Cogaps.cpp  CogapsR.cpp  FixedMatrices.cpp  GAPSNorm.cpp  GAPSNorm.h  GapsAssert.h  GapsDispatcher.cpp  GapsDispatcher.h  GapsParameters.cpp  GapsParameters.h  GapsPrint.h  GapsResult.cpp  GapsResult.h  GapsRunner.cpp  GapsRunner.h  GapsStatistics.cpp  GapsStatistics.h  GibbsSampler-atomic.cpp  GibbsSampler-init.cpp  GibbsSampler-unused.cpp  GibbsSampler-update.cpp  GibbsSampler-util.cpp  GibbsSampler.cpp  GibbsSampler.h  GibbsSamplerImplementation.cpp  GibbsSamplerImplementation.h  GibbsSamplerInterface.h  (+38 more)
src/atomic/: Atom.cpp  Atom.h  AtomAllocator.cpp  AtomAllocator.h  AtomicDomain.cpp  AtomicDomain.h  ConcurrentAtom.cpp  ConcurrentAtom.h  ConcurrentAtomicDomain.cpp  ConcurrentAtomicDomain.h  ProposalQueue.cpp  ProposalQueue.h
src/cpp_tests/: README.md  catch.h  test-runner.cpp  testAlgorithms.cpp  testAtomicDomain.cpp  testAtomicSupport.cpp  testConcurrentAtomicDomain.cpp  testDenseGibbsSampler.cpp  testEfficientSets.cpp  testFileParsers.cpp  testGapsRunner.cpp  testGibbsSampler.cpp  testHashSets.cpp  testHybridMatrix.cpp  testHybridVector.cpp  testMatAlgo.cpp  testMatrix.cpp  testProposalQueue.cpp  testRandgen.cpp  testRandom.cpp  testSamplerHighLevel.cpp  testSerialization.cpp  testSparseGibbsSampler.cpp  testSparseIterator.cpp  testSparseMatrix.cpp  testSparseVector.cpp  testVector.cpp
src/data_structures/: EfficientSets.h  FixedHashSet.h  HashSets.cpp  HashSets.h  HybridMatrix.cpp  HybridMatrix.h  HybridVector.cpp  HybridVector.h  Matrix.cpp  Matrix.h  MutableMap.h  SparseIterator.cpp  SparseIterator.h  SparseMatrix.cpp  SparseMatrix.h  SparseVector.cpp  SparseVector.h  Vector.cpp  Vector.h
src/file_parser/: CharacterDelimitedParser.cpp  CharacterDelimitedParser.h  CsvParser.cpp  CsvParser.h  FileParser.cpp  FileParser.h  GctParser.cpp  GctParser.h  Hdf5Parser.cpp  Hdf5Parser.h  MatrixElement.cpp  MatrixElement.h  MtxParser.cpp  MtxParser.h  TsvParser.cpp  TsvParser.h
src/gibbs_sampler/: AlphaParameters.cpp  AlphaParameters.h  AsynchronousGibbsSampler.h  DenseGibbsSampler.cpp  DenseGibbsSampler.h  DenseNormalModel.cpp  DenseNormalModel.h  DenseNormalWithUncertaintyModel.cpp  DenseNormalWithUncertaintyModel.h  DenseStoragePolicy.cpp  DenseStoragePolicy.h  GibbsSampler.h  (+8 more)
tests/: DEV.md  debugRuns.R  testthat.R
vignettes/: CoGAPS Workflow.Rmd  CoGAPS.Rmd  CoGAPS.html  CoGAPSUsersManual-concordance.tex  CoGAPSUsersManual.Rnw  CoGAPSUsersManual.Rnw~  CoGAPSUsersManual.bbl  CoGAPSUsersManual.tex  CoGAPSUsersManual.toc  CoGAPS_Workflow.Rmd  CoGAPS_Workflow.html  DataInput.Rmd  GWCoGAPSvignette.Rmd  GWCoGAPSvignette.html  References.bib  ShinyApp.tiff  example_matched_ps.RData  example_partition_1.RData  example_partition_2.RData  modsimdebug.Rmd  old_stuff.txt
(+55 files in other folders)
